从阻塞队列升级为消息队列，但是异常率极高，存在严重的逻辑错误